--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <p>Contact: myemail@example.com</p>
     </footer>
     <img src="images/profile.jpg" alt="My Photo" width="200">
-
+<h2>SHUBHAN ALI</h2>
 </body>
 </html>
