--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Hello! I am a web developer. This is my portfolio website.</p>
     </section>
     <footer>
-        <p>Contact: myemail@example.com</p>
+        <p>Contact: shubhanali731@gmail.com</p>
     </footer>
     <img src="images/profile.jpg" alt="My Photo" width="200">
 <h2>SHUBHAN ALI</h2>
