--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <footer>
         <p>Contact: shubhanali731@gmail.com</p>
     </footer>
-    <img src="images/profile.jpg" alt="My Photo" width="200">
+    <img src="images/port.jpg" alt="My Photo" width="200">
 <h2>SHUBHAN ALI</h2>
 </body>
 </html>
