--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
     <section id="tools" class="tools-section">
         <h2>Popular Tools</h2>
         <div class="tool-grid">
-            <div class="tool-card" onclick="openTool('instagram-downloader.html')">
-                <img src="insta-icon.png" alt="Instagram Downloader">
+            <div class="tool-card" onclick="openTool('tools/instagram-downloader.html')">
+                <img src="image/insta-icon.jfif" alt="Instagram Downloader">
                 <p>Instagram Video Downloader</p>
             </div>
             <div class="tool-card">
-                <img src="pdf-icon.png" alt="PDF Converter">
+                <img src="image/pdf-icon.jfif" alt="PDF Converter">
                 <p>PDF to Word</p>
             </div>
             <div class="tool-card">
-                <img src="youtube-icon.png" alt="YouTube Thumbnail Downloader">
+                <img src="image/youtube-icon.png" alt="YouTube Thumbnail Downloader">
                 <p>YouTube Thumbnail Downloader</p>
             </div>
         </div>
