--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>PDF to Word</p>
             </div>
             <div class="tool-card">
-                <img src="image/youtube-icon.png" alt="YouTube Thumbnail Downloader">
+               <img src="/your-folder/images/youtube-icon.png" alt="YouTube Logo">
                 <p>YouTube Thumbnail Downloader</p>
             </div>
         </div>
